--- a/analysis/study2.qmd
+++ b/analysis/study2.qmd
@@ -291,7 +291,7 @@ check_ranges <- function(var = "Neuroticism") {
 
 
 
-data <- pool_coef(with = "Gender", component = "Demographic", category = "Demographic", name = "Gender (Female - Male)")
+data <- pool_coef(with = "Gender", component = "Demographic", category = "Demographics", name = "Gender (Female - Male)")
 ```
 
 ### Age
@@ -300,7 +300,7 @@ data <- pool_coef(with = "Gender", component = "Demographic", category = "Demogr
 #| warning: false
 
 # check_ranges("Age")
-data <- rbind(data, pool_coef(with = "Age", component = "Demographic", category = "Demographic", unequalrange=TRUE))
+data <- rbind(data, pool_coef(with = "Age", component = "Demographic", category = "Demographics", unequalrange=TRUE))
 ```
 
 
@@ -472,7 +472,7 @@ data <- rbind(
 )
 ```
 
-## Psychopathology
+##  "Psychopathology and Neurodevelopmental Traits"
 
 ```{r}
 #| warning: false
@@ -481,7 +481,7 @@ data <- rbind(
 
 data <- rbind(
   data,
-  pool_coef(with = "BPD", component="Maladaptive", category = "Psychopathology", name = "Boderline Personality")
+  pool_coef(with = "BPD", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Boderline Personality")
 )
 ```
 
@@ -492,11 +492,11 @@ data <- rbind(
 
 data <- rbind(
   data,
-  pool_coef(with = "PID5_Antagonism", component="Maladaptive", category = "Psychopathology", name = "Antagonism - PID-5"),
-  pool_coef(with = "PID5_Detachment", component="Maladaptive", category = "Psychopathology", name = "Detachment - PID-5"), 
-  pool_coef(with = "PID5_Disinhibition", component="Maladaptive", category = "Psychopathology", name = "Disinhibition - PID-5"),
-  pool_coef(with = "PID5_NegativeAffect", component="Maladaptive", category = "Psychopathology", name = "Negative Affect - PID-5"),
-  pool_coef(with = "PID5_Psychoticism", component="Maladaptive", category = "Psychopathology", name = "Psychoticism - PID-5")
+  pool_coef(with = "PID5_Antagonism", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Antagonism - PID-5"),
+  pool_coef(with = "PID5_Detachment", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Detachment - PID-5"), 
+  pool_coef(with = "PID5_Disinhibition", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Disinhibition - PID-5"),
+  pool_coef(with = "PID5_NegativeAffect", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Negative Affect - PID-5"),
+  pool_coef(with = "PID5_Psychoticism", component="Maladaptive", category = "Psychopathology and Neurodevelopmental Traits", name = "Psychoticism - PID-5")
 )
 ```
 
@@ -505,15 +505,15 @@ data <- rbind(
 
 data <- rbind(
   data,
-  pool_coef(with = "SPQ_ConstrictedAffect", component="Schizotypic", category = "Psychopathology", name = "Constricted Affect - SPQ"),
-  pool_coef(with = "SPQ_Eccentric", component="Schizotypic", category = "Psychopathology", name = "Eccentric - SPQ"),
-  pool_coef(with = "SPQ_MagicalThinking", component="Schizotypic", category = "Psychopathology", name = "Magical Thinking - SPQ"),
-  pool_coef(with = "SPQ_NoCloseFriends", component="Schizotypic", category = "Psychopathology", name = "No Close Friends - SPQ"),
-  pool_coef(with = "SPQ_OddSpeech", component="Schizotypic", category = "Psychopathology", name = "Odd Speech - SPQ"),
-  pool_coef(with = "SPQ_Reference", component="Schizotypic", category = "Psychopathology", name = "Reference - SPQ"),
-  pool_coef(with = "SPQ_SocialAnxiety", component="Schizotypic", category = "Psychopathology", name = "Social Anxiety - SPQ"),
-  pool_coef(with = "SPQ_Suspiciousness", component="Schizotypic", category = "Psychopathology", name = "Suspiciousness - SPQ"),
-  pool_coef(with = "SPQ_UnusualPerceptions", component="Schizotypic", category = "Psychopathology", name = "Unusual Perceptions - SPQ")
+  pool_coef(with = "SPQ_ConstrictedAffect", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Constricted Affect - SPQ"),
+  pool_coef(with = "SPQ_Eccentric", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Eccentric - SPQ"),
+  pool_coef(with = "SPQ_MagicalThinking", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Magical Thinking - SPQ"),
+  pool_coef(with = "SPQ_NoCloseFriends", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "No Close Friends - SPQ"),
+  pool_coef(with = "SPQ_OddSpeech", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Odd Speech - SPQ"),
+  pool_coef(with = "SPQ_Reference", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Reference - SPQ"),
+  pool_coef(with = "SPQ_SocialAnxiety", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Social Anxiety - SPQ"),
+  pool_coef(with = "SPQ_Suspiciousness", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Suspiciousness - SPQ"),
+  pool_coef(with = "SPQ_UnusualPerceptions", component="Schizotypic", category = "Psychopathology and Neurodevelopmental Traits", name = "Unusual Perceptions - SPQ")
 )
 ```
 
@@ -524,11 +524,11 @@ data <- rbind(
 
 data <- rbind(
   data,
-  pool_coef(with = "ASQ_Imagination", component="Autistic", category = "Psychopathology", name = "Imagination - ASQ"),
-  pool_coef(with = "ASQ_LackSocialSkills", component="Autistic", category = "Psychopathology", name = "Lack of Social Skills - ASQ"), 
-  pool_coef(with = "ASQ_LowAttentionalSwitching", component="Autistic", category = "Psychopathology", name = "Low Attentional Switching - ASQ"),
-  pool_coef(with = "ASQ_Patterns", component="Autistic", category = "Psychopathology", name = "Patterns and Numbers - ASQ"),
-  pool_coef(with = "ASQ_Routine", component="Autistic", category = "Psychopathology", name = "Routines - ASQ")
+  pool_coef(with = "ASQ_Imagination", component="Autistic", category = "Psychopathology and Neurodevelopmental Traits", name = "Imagination - ASQ"),
+  pool_coef(with = "ASQ_LackSocialSkills", component="Autistic", category = "Psychopathology and Neurodevelopmental Traits", name = "Lack of Social Skills - ASQ"), 
+  pool_coef(with = "ASQ_LowAttentionalSwitching", component="Autistic", category = "Psychopathology and Neurodevelopmental Traits", name = "Low Attentional Switching - ASQ"),
+  pool_coef(with = "ASQ_Patterns", component="Autistic", category = "Psychopathology and Neurodevelopmental Traits", name = "Patterns and Numbers - ASQ"),
+  pool_coef(with = "ASQ_Routine", component="Autistic", category = "Psychopathology and Neurodevelopmental Traits", name = "Routines - ASQ")
 )
 ```
 
@@ -717,14 +717,11 @@ p <- data |>
          var_Interoception = str_replace(var_Interoception, "UrinateDefecate", "Urinate/Defecate"),
          var_Interoception = str_replace(var_Interoception, "WindBurp", "Wind/Burp"),
          var_Interoception = fct_relevel(var_Interoception, "Original", "Hungry/Thirsty", "Bruise/Blood sugar", "Muscles/Pain", "Cough/Sneeze", "Wind/Burp", "Breathing/Heart", "Urinate/Defecate"),
-         Category = recode(
+         Category = fct_recode(
            Category,
-      "Demographic" = "Demographic" ,
-      "Psychopathology" = 
-      "Psychopathology and Neurodevelopmental Traits"
-    ),
+      "Demo" = "Demographics"),
          Category = fct_relevel(
-           Category, "Demographics", "Interoception", "Mood", "Psychopathology and Neurodevelopmental Traits", "Personality", "Beliefs"),
+           Category, "Demo", "Interoception", "Mood", "Psychopathology and Neurodevelopmental Traits", "Personality", "Beliefs"),
          Component = fct_relevel(Component, "Demographic", "Interoception", "MAIA", "Anxiety", "Depression", "Schizotypic", "Autistic", "Maladaptive", "Personality", "World Beliefs", "Conspiracy Beliefs", "Lying Profile")) |> 
   group_by(Component) |> 
   mutate(var_Correlate = fct_reorder(var_Correlate, r, .fun=mean)) |>
@@ -752,14 +749,14 @@ p <- data |>
   theme(panel.grid.major.y = element_line(),
         axis.title.y = element_blank(),
         axis.line.x = element_blank(),
-        axis.text.y = element_text(size = rel(0.5)),
+        axis.text.y = element_text(size = rel(0.8)), 
         axis.text.x = element_text(size = rel(0.8)),
         plot.title = element_text(face = "bold", hjust = 0),
         strip.placement = "outside",
         strip.background.y = element_rect(fill = "#E0E0E0", color = "white"),
         strip.background.x = element_rect(fill = "#F8BBD0", color = "white"))
 p
-ggsave("figures/Figure3.png", p, width=21*0.55, height=29.7*0.4, dpi=300, bg="white")
+ggsave("figures/Figure3.png", p, width=25*0.55, height=38*0.4, dpi=300, bg="white")
 ```
 
 ## Discussion
