updated intro on the manuscript

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -115,6 +115,35 @@
   publisher={PeerJ Inc.}
 }
 
+@article{longarzo2015self,
+  title={Self-awareness questionnaire},
+  author={Longarzo, Mariachiara and D’Olimpio, Francesca and Chiavazzo, Angela and Santangelo, Gabriella and Trojano, Luigi and Grossi, Dario},
+  journal={Frontiers in Psychology},
+  year={2015}
+}
+
+@article{miller1981consciousness,
+  title={Consciousness of body: private and public.},
+  author={Miller, Lynn C and Murphy, Richard and Buss, Arnold H},
+  journal={Journal of personality and social psychology},
+  volume={41},
+  number={2},
+  pages={397},
+  year={1981},
+  publisher={American Psychological Association}
+}
+
+@article{vig2022questionnaires,
+  title={Questionnaires of interoception do not assess the same construct},
+  author={Vig, Luca and K{\"o}teles, Ferenc and Ferentzi, Eszter},
+  journal={Plos one},
+  volume={17},
+  number={8},
+  pages={e0273299},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
 @article{vig2023self,
   title={Self-reported interoception, worries and protective behaviors during the COVID-19 pandemic: a longitudinal study},
   author={Vig, Luca and Ferentzi, Eszter and K{\"o}teles, Ferenc},
@@ -764,6 +793,141 @@
   number={4},
   pages={707--710},
   year={2009},
+  publisher={Elsevier}
+}
+
+@article{murphy2024interoception,
+  title={Interoception: Where do we go from here?},
+  author={Murphy, Jennifer},
+  journal={Quarterly Journal of Experimental Psychology},
+  volume={77},
+  number={2},
+  pages={223--229},
+  year={2024},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{lischke2021heart,
+  title={Heart rate variability modulates interoceptive accuracy},
+  author={Lischke, Alexander and Pahnke, Rike and Mau-Moeller, Anett and Weippert, Matthias},
+  journal={Frontiers in neuroscience},
+  volume={14},
+  pages={612445},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{wareing2024utility,
+  title={The utility of heartrate and heartrate variability biofeedback for the improvement of interoception across behavioural, physiological and neural outcome measures: A systematic review},
+  author={Wareing, Lettie and Readman, Megan Rose and Longo, Matthew R and Linkenauger, Sally A and Crawford, Trevor J},
+  journal={Brain Sciences},
+  volume={14},
+  number={6},
+  pages={579},
+  year={2024},
+  publisher={MDPI}
+}
+
+@article{nord2021disrupted,
+  title={Disrupted dorsal mid-insula activation during interoception across psychiatric disorders},
+  author={Nord, Camilla L and Lawson, Rebecca P and Dalgleish, Tim},
+  journal={American Journal of Psychiatry},
+  volume={178},
+  number={8},
+  pages={761--770},
+  year={2021},
+  publisher={American Psychiatric Association Washington, DC}
+}
+
+@article{desmedt2022measures,
+  title={What do measures of self-report interoception measure? Insights from a systematic review, latent factor analysis, and network approach},
+  author={Desmedt, Olivier and Heeren, Alexandre and Corneille, Olivier and Luminet, Olivier},
+  journal={Biological Psychology},
+  volume={169},
+  pages={108289},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{desmedt2025discrepancies,
+  title={Discrepancies in the definition and measurement of human interoception: A comprehensive discussion and suggested ways forward},
+  author={Desmedt, Olivier and Luminet, Olivier and Maurage, Pierre and Corneille, Olivier},
+  journal={Perspectives on Psychological Science},
+  volume={20},
+  number={1},
+  pages={76--98},
+  year={2025},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{ferentzi2019body,
+  title={Do body-related sensations make feel us better? Subjective well-being is associated only with the subjective aspect of interoception},
+  author={Ferentzi, Eszter and Horv{\'a}th, {\'A}ron and K{\"o}teles, Ferenc},
+  journal={Psychophysiology},
+  volume={56},
+  number={4},
+  pages={e13319},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@incollection{harrison2024interoception,
+  title={Interoception and Physical Health},
+  author={Harrison, Olivia K and Pink, Aimee},
+  booktitle={Interoception: A Comprehensive Guide},
+  pages={227--264},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{pollatos2023interoceptive,
+  title={Interoceptive accuracy is associated with benefits in decision making in children},
+  author={Pollatos, Olga and M{\"o}nkem{\"o}ller, Karla and Groppe, Karoline and Elsner, Birgit},
+  journal={Frontiers in psychology},
+  volume={13},
+  pages={1070037},
+  year={2023},
+  publisher={Frontiers Media SA}
+}
+
+@article{raimo2021body,
+  title={The body across adulthood: on the relation between interoception and body representations},
+  author={Raimo, Simona and Boccia, Maddalena and Di Vita, Antonella and Cropano, Maria and Guariglia, Cecilia and Grossi, Dario and Palermo, Liana},
+  journal={Frontiers in neuroscience},
+  volume={15},
+  pages={586684},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{joshi2023interoception,
+  title={Interoception in fear learning and posttraumatic stress disorder},
+  author={Joshi, Sonalee A and Aupperle, Robin L and Khalsa, Sahib S},
+  journal={Focus},
+  volume={21},
+  number={3},
+  pages={266--277},
+  year={2023},
+  publisher={American Psychiatric Association Washington, DC}
+}
+
+@article{zamariola2019relationship,
+  title={Relationship between interoception and emotion regulation: New evidence from mixed methods},
+  author={Zamariola, Giorgia and Frost, Nollaig and Van Oost, Alice and Corneille, Olivier and Luminet, Olivier},
+  journal={Journal of Affective Disorders},
+  volume={246},
+  pages={480--485},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{terasawa2021effects,
+  title={Effects of insular resection on interactions between cardiac interoception and emotion recognition},
+  author={Terasawa, Yuri and Motomura, Kazuya and Natsume, Atsushi and Iijima, Kentaro and Chalise, Lushun and Sugiura, Junko and Yamamoto, Hiroyasu and Koyama, Kyohei and Wakabayashi, Toshihiko and Umeda, Satoshi},
+  journal={Cortex},
+  volume={137},
+  pages={271--281},
+  year={2021},
   publisher={Elsevier}
 }
 
