--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Mega-analysis of the Interoceptive Accuracy Scale (IAS) Structure and its Subjective Correlates"
+title: "Mega-analysis of the Interoceptive Accuracy Scale (IAS) Structure and its Dispositional Correlates"
 shorttitle: "IAS Mega-analysis"
 author:
   - name: Ana Neves
@@ -116,9 +116,9 @@ author-note:
     financial-support: ~
     authorship-agreements: ~
 abstract: | 
-  Various questionnaires assessing interoceptive sensibility (i.e., the tendency to focus on and detect   internal bodily sensations) have shown low correlations, highlighting the need for greater conceptual clarity (Desmedt et al., 2022). The Interoceptive Accuracy Scale (IAS) is a recently developed measure of subjective interoceptive accuracy, but studies have reported inconsistent factor structures. This paper, therefore, aimed to (1) clarify the IAS structure using a mega-analytic approach and (2) examine its construct validity. In Study 1 (N = 33,526 across 17 open-access datasets), three analytic approaches were applied: exploratory and confirmatory factor analysis, hierarchical clustering, and exploratory graph analysis. Analyses identified redundant or unstable items, resulting in a refined 14-item IAS comprising seven item pairs (e.g., Hunger–Thirst, Urinate–Defecate, Cough–Sneeze). Study 2 examined associations between the IAS and measures of interoception, mood, anxiety, psychopathology, personality, and belief-related constructs. The IAS positively correlated with most MAIA facets (except Not-Distracting and Not-Worrying) and BPQ-Body Awareness, and negatively with BPQ Autonomic Reactivity, alexithymia, and interoceptive confusion. Mood showed small-to-moderate negative associations, while associations with psychopathology were selective, primarily observed for visceral item pairings. Belief-related associations were generally small. The 14-item IAS performed comparably to the original 21-item version, but item-pairing improved interpretability and highlighted domain-specific patterns. Overall, self-perceived interoceptive accuracy appears to be a differentiated construct across bodily systems. Future research should expand item content and adopt context-specific phrasing to capture interoceptive beliefs more comprehensively.
+  Recent reviews demonstrate that historic questionnaires designed to assess interoceptive sensibility (i.e., the tendency to focus on and detect internal bodily sensations) show low convergence and likely measure distinct constructs. Motivated by the theoretical distinction between interoceptive accuracy versus attention, the Interoceptive Accuracy Scale (IAS) is a recently developed, promising, and increasingly popular measure of subjective interoceptive accuracy. Across two studies, we used a mega-analytic approach combining data from 17 datasets with over 33 thousand participants to provide the most comprehensive evaluation to date of the IAS including both its structure (Study 1) and dispositional correlates (Study 2).Study 1 used exploratory and confirmatory factor analysis, hierarchical clustering, and exploratory graph analysis, identifying redundant or unstable items and resulted in a robust and replicable structure, leading to a refined 14-item scale. Results suggest that rather than measuring the broad latent construct of “interoceptive accuracy” the IAS reflects 7 clusters of tightly coupled items tied to specific bodily sensations (e.g., Hunger–Thirst, Urinate–Defecate, Cough–Sneeze). Study 2 examined associations between the full IAS and its 7-item pairs to measures of interoception, mood, anxiety, psychopathology, personality, and belief-related constructs. Consistent with previous findings the IAS positively correlated with most MAIA facets and BPQ-Body Awareness, and negatively with BPQ Autonomic Reactivity, alexithymia, and interoceptive confusion. Mood showed small-to-moderate negative associations, while associations with psychopathology were selective, primarily observed for visceral item pairs. Belief-related associations were generally small. The 14-item IAS performed comparably to the original 21-item version, but item-pairing improved interpretability and highlighted domain-specific patterns. In particular, the Hungry–Thirsty and Bruise–Blood sugar items pairs had the strongest and most consistent associations to interoceptive, affective, and personality measures. Taken together, findings suggest self-perceived interoceptive accuracy is a differentiated construct, varying systematically across bodily systems. Results emphasize the importance of conceptualizing and operationalizing interoceptive processes as domain-specific and the need for context-specific and multi-dimensional interoception measures.
 #   **Significance Statement**. TODO.
-keywords: "Interoception questionnaires, interoception accuracy scale, mega-analysis, IAS factor-structure, IAS Validation, MAIA, BPQ, domain-specific associations"
+keywords: "Interoception, interoception accuracy, interoception sensibility, measurement, exploratory factor analysis, network analysis"
 floatsintext: true
 numbered-lines: true
 bibliography: bibliography.bib
@@ -155,77 +155,68 @@ editor_options:
 
 <!-- Interoception definition -->
 
-Interoception refers to the process of sensing, interpreting and integrating information pertaining to internal organs, such as the heart, the lungs or the gut [@khalsa2018interoception]. 
-While recent research emphasizes a key role of interoception in a variety of processes (e.g., emotion regulation, decision making) and of outcomes (physical and psychological well being), the field remains clouded by concerns about how interoception is assessed.
+Interoception refers to the process of sensing, interpreting and integrating information of internal bodily stimuli by the nervous system, including both internal organs (e.g., the heart, the lungs or the gut) but also more broadly physiological tissues that inform the central nervous system about the body’s current state [@khalsa2018interoception]. Although research emphasizes interoception’s fundamental role  in numerous  processes, such as emotion recognition [@terasawa2021effects] and regulation [@zamariola2019relationship], decision making [@pollatos2023interoceptive], learning [@joshi2023interoception], body-ownership [@raimo2021body] and outcomes including physical [@harrison2024interoception] and psychological health [@nord2021disrupted] along with well-being [@ferentzi2019body], the field remains hampered by concerns regarding both the conceptualization and measurement of interoception [@desmedt2025discrepancies; @desmedt2022measures; @murphy2024interoception]. 
 
 ## The Interoceptive Assessment Puzzle
 
 <!-- Interoception measure -->
 
-Various measures of interoception have been developed (see @fig-measures), forming a combination of "objective" and "subjective" assessments (i.e., physiological tasks such as the heart beat counting or tracking *vs.* questionnaires and subjective scales involving metacognitive judgments), "explicit" and "implicit" paradigms (i.e., directing participants' awareness and attention to interoceptive processes *vs.* measuring interoception unbeknownst to them), various interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimensions (e.g., accuracy, sensitivity, awareness).
-While there is no consensus as to which particular approach provides the most accurate and "pure" measure of interoception and interoceptive abilities (assuming it is a unidimensional construct), it is instead plausible that each measure has strengths and limitations, and a utility dependent on the context and goal at hand [@jahedi2014; @Desmedt2023accuracy].
+Numerous methods of assessing interoception have been developed (see @fig-measures), which can be broadly distinguished into “direct” and “indirect” approaches. Indirect approaches assess interoceptive processes by quantified by the coupling between physiological signals and cognitive or behavioural processes. At the “ability level”, such measures capture individual differences in traits related to this coupling (e.g., alexithymia) whereas at the “mechanism” level, they index psychophysiological interactions more directly (e.g., heart rate variability). 
+
+Although these approaches do not directly measure interoceptive perception, they rely on interoceptive mechanisms and therefore provide assessment of interoceptive functioning [@wareing2024utility; @lischke2021heart]. In contrast, direct measures try to capture interoceptive processes more explicitly and encompass both “objective” and “subjective” assessments (i.e., behavioral tests of heart beat counting or tracking vs. trait questionnaires and self-reported metacognitive judgments), as well as “explicit” and “implicit” paradigms (i.e., directing participants’ awareness and attention to interoceptive processes vs. measuring interoception covertly). Measures also differ on the interoceptive modalities (e.g., cardioception, respiroception, gastroception) and theoretical dimension (e.g., accuracy, sensitivity, awareness) assessed. The diversity in measurement approaches illustrates that rather than there being a ‘gold-standard’ measure of interoception in the field, each measure likely has strengths and limitations depending on the research context and dimension of interoception being assessed [@jahedi2014; @Desmedt2023accuracy].
 
 ```{r}
 #| warning: false
 #| label: "fig-measures"
 #| apa-twocolumn: true  # A Figure Spanning Two Columns When in Journal Mode
 #| out-width: "100%"
-#| fig-cap: "The Interoceptive Assessment Puzzle. The different modalities of interoception (e.g., cardioception) can be assessed directly or indirectly. Direct assessments can further be subjective or objective, depending on whether they involve conscious metacognitive appraisals or more performance-based indices. Interoceptive tasks can be explicit (the participant is aware of the interoceptive nature of the task and must consciously attend to interoceptive signals; e.g., the heartbeat counting task) or implicit (measurements of interoception done unbeknowst to the participant; e.g., heartbeat evoked potentials measured during resting state). Indirect assessments evaluate constructs typically related (and ideally dependent on) to interoceptive processes or ability (or its deficit)."
+#| fig-cap: "The Interoceptive Assessment Puzzle. The different modalities of interoception (e.g., cardioception) can be assessed directly or indirectly. Direct assessments can be subjective or objective, depending on whether they use conscious metacognitive appraisals or performance-based indices. Objective interoceptive tasks can be explicit (participants must consciously attend to interoceptive signals; e.g., the heartbeat counting task) or implicit (measurements of interoception are covert; e.g., heartbeat evoked potentials measured during rest). Indirect assessments evaluate constructs typically related, and ideally dependent on, interoceptive processes (e.g., physiological indices such as HRV or effect of cardiac phase) or abilities (e.g., self-report measures of emotion regulation or identification abilities."
 
 knitr::include_graphics("figures/MeasuringInteroception.png")
 ```
 
 <!-- self-reports -->
+Although using self-report questionnaires to measure deeply embodied functions might seem paradoxical, recent redefinitions of interoception emphasize the importance of high-level and metacognitive elaboration of interoceptive information, and supportthe idea that some facets of interoception, including participants’ metacognitive beliefs, can be subjectively assessed [@khalsa2018interoception; @suksasilp2022towards].. 
 
-Although the use of subjective self-report questionnaires to measure deeply embodied functions might seem paradoxical at first, recent redefinitions of interoception emphasize the role of high-level and metacognitive elaboration of interoceptive information.
-These redefinitions provide theoretical grounding to support the idea that some facets of interoception, including participants' metacognitive beliefs, can be assessed subjectively [@khalsa2018interoception; @suksasilp2022towards].
-Moreover, the notion that self-reports might not reflect the same processes as other interoception tasks might be important to contextualize the apparent lack of convergence between measures in the field [@desmedt2022measures].
-For instance, existing findings typically show weak or no correlations between questionnaires and objective measures, such as the Heartbeat Counting Task [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological], including for measures of the same theoretical dimensions [e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023; @arslanova2022].
-Additionally, even various objective measures assessing in theory the same interoceptive dimension, such as accuracy, either show no or weak correlation [respectively, @brand2023; @hickman2020relationship].
-Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting (in parallel to major validity concerns) the potential targeting of different facets related to interoception.
+Indeed, the fact that self-reported interoception reflects a fundamentally different aspect of conscious interoceptive processing compared to objective task measures, is thought to be central to understanding the reported lack of convergence between objective and subjective measures [@desmedt2022measures]. For instance, there are typically weak or no correlation between questionnaires and objective measures [HCT, @schandry1981heart] and the Heartbeat Detection Task [HDT, @kleckner2015methodological], even when both measures are intended to capture the same theoretical interoceptive dimension [e.g., task-based accuracy vs. self-reported accuracy, @murphy2019; @brand2023; @arslanova2022]. 
 
-One striking example concerns the assessment of interoceptive sensibility, which is broadly defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], but more narrowly as the subjective tendency to focus on interoceptive signals, without necessarily implying detection ability [@khalsa2018interoception].
-A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, with the risk of researchers treating them as equivalent despite overall low convergence [@desmedt2022measures].
-Notably, this review adopted a broad definition of sensibility, incorporating both interoceptive sensibility and interoceptive self-report scales, following the eight-facet model by @khalsa2018interoception.
+Perhaps more surprisingly, there is also a reported lack of convergence across both objective and subjective measures: objective measures purporting to measure the  same interoceptive dimension, such as accuracy, show no or weak correlation [respectively, @brand2023; @hickman2020relationship], and subjective questionnaire measures are only weakly correlated with each other [@vig2022questionnaires]. As well as posing substantial validity concerns,  these findings raise the possibility that even within broad measurement domain, different measures are  targeting fundamentally different facets of interoception, undermining replicability and hindering theoretical and empirical progress in the field.
+
+The lack of convergence among self-reported trait measures of interoception, also called “interoceptive sensibility” [i.e., the tendency to focus on and/or accurately detect interoceptive signals; @garfinkel2015knowing; @khalsa2018interoception], is particularly striking and problematic.  A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, with the risk of researchers treating them as equivalent despite overall low convergence [@vig2022questionnaires; @desmedt2022measures].  
+
 <!-- In this framework, self-report measures are categorized into interoceptive sensibility and interoceptive self-report scales (i.e., the ability to evaluate one's personal experiences of internal bodily states, assess their consequences, and articulate them through speech or movement). -->
-Several widely used questionnaires were included in the review, such as the Multidimensional Assessment of Interoceptive Awareness [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], the Body Perception Questionnaire [BPQ, @porges1993body], the Private subscale of the Body Consciousness Questionnaire [PBCS, @miller1981consciousness], the Body Awareness Questionnaire [BAQ, @shields1989body], and the Eating Disorder Inventory [EDI, @garner1991eating; @garner1983].
-The lack of correlations to moderate correlations among these questionnaires highlight the need for greater conceptual clarity regarding what each measure captures, how they relate to different dimensions of interoception, and their potential overlaps with other constructs, such as alexithymia and body awareness.
+Several widely used questionnaires were included in the review, such as the Body Perception Questionnaire [BPQ, @porges1993body], the Multidimensional Assessment of Interoceptive Awareness [MAIA, @mehling2012; MAIA-2, @mehling2018multidimensional], the Body Awareness Questionnaire [BAQ, @shields1989body], the Private subscale of the Body Consciousness Questionnaire [PBCS, @miller1981consciousness], and the Self-Awareness Questionnaire [SAQ, @longarzo2015self] which comprised 86% of all citations. The lack of correlations to moderate correlations among questionnaires measures suggests that rather than measuring a common construct they likely capture different aspects of interoception, emphasizing the need for greater conceptual clarity regarding what each measure captures, how they relate to different dimensions of interoception, and their potential overlaps with other constructs, such as alexithymia and body awareness. One avenue for addressing these issues is the careful investigation of newer measures that were not included in prior reviews.
 
 ## The Interoceptive Accuracy Scale (IAS)
 
 <!-- Introducing the IAS -->
 
-Focusing on the *accuracy* dimension of interoception, a recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019].
-The IAS consists of 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (*"I can always accurately perceive when I am breathing fast"*), heart (*"I can always accurately perceive when my heart is beating fast"*), skin (*"I can always accurately perceive when something is going to be ticklish"*), arousal or bodily functions like coughing (*"I can always accurately perceive when I am going to cough"*) or urinating (*"I can always accurately perceive when I need to urinate"*).
-Appealingly, the IAS' statements are about specific interoceptive behaviours and "objective" experiences (although still subjective reports of them), which is a distinct difference with other popular interoception questionnaires, such as the MAIA-2, which contains more general and metacognitive items (e.g., *"I trust my body sensations"*, *"I can notice an unpleasant body sensation without worrying about it"*), as well as dimensions related to attention regulation (e.g., Not-distracting) or emotion regulation (e.g., Not-worrying).
+Focusing on the accuracy dimension of interoceptive sensibility, a recently developed scale with a rapidly growing popularity is the Interoceptive Accuracy Scale [IAS, @murphy2019]. The authors developed the IAS to clarify not only how interoception is measured, but also what is being measured. Whereas many existing interoceptive models [e.g., @garfinkel2015knowing; @khalsa2018interoception] conflate interoceptive accuracy and attention, Murphy and colleagues conceptualise these as distinct dimensions. As a result, individuals may report attending to internal bodily signals while simultaneously recognising that their perception of these signals is inaccurate. This distinction represents a conceptual advance in the measurement of interoceptive sensibility and positions the IAS as the only tool specifically designed to assess subjective interoceptive accuracy.
+
+The IAS comprises 21 Likert-scale items that query how accurately one can perceive different bodily signals, with one item per physiological modality such as respiration (“I can always accurately perceive when I am breathing fast”), heart (“I can always accurately perceive when my heart is beating fast”), skin (“I can always accurately perceive when something is going to be ticklish”), arousal or bodily functions like coughing (“I can always accurately perceive when I am going to cough”) or urinating (“I can always accurately perceive when I need to urinate”). Appealingly, the IAS’ items are about specific interoceptive behaviors and “objective” experiences (albeit subjective reports of them), a distinct difference compared to other popular interoception questionnaires, such as the MAIA-2, which contains more general and metacognitive items (e.g., “I trust my body sensations”, “I can notice an unpleasant body sensation without worrying about it”), as well as dimensions related to attention and emotion regulation (e.g., Not-distracting and Not-worrying subscales respectively).
 
 <!-- IAS structure  -->
-The original validation study suggested a two-factor structure for the IAS, one reflecting the perception of general interoceptive signals (urinate, hungry, defecate, thirsty, pain, heart, taste, breathing, temperature, muscles, affective touch, vomit, sexual arousal), and other relating to signals that may be difficult to perceive solely through interoceptive information (itch, tickle, cough, burp, bruise, blood sugar, sneeze, wind).
-The authors however underlined its acceptable but imperfect fit [@murphy2019, p. 127], and several follow-up studies have indeed identified different optimal solutions.
-For instance, @brand2023 reported a 1-factor solution, while @lin2023 and @campos2021 found bifactor solutions [i.e., one general factor above a set of lower-level factors, @rodriguez2016evaluating] to be the best fit.
-Using a 2-factors Exploratory Factor Analysis (EFA), @koike2023 suggested that the items could be grouped into cutaneous (itching, tickling, coughing, burping, affective touch, bruising, passing gas, sneezing, muscle sensations, sexual arousal, and taste) and visceral sensations (urination, defecation, hunger, thirst, pain, breathing, fatigue/blood sugar, temperature, vomiting, and heartbeat).
+The original IAS validation study suggested a two-factor structure: one reflecting the perception of interoceptive signals (urinate, hungry, defecate, thirsty, pain, heart, taste, breathing, temperature, muscles, affective touch, vomit, sexual arousal), and the other comprising signals that are either difficult to perceive solely through interoceptive information or reflect socially unacceptable bodily functions (itch, tickle, cough, burp, bruise, blood sugar, sneeze, wind). The authors highlight the imperfect fit of the 2-factor structure [@murphy2019, p. 127], with  several subsequent  studies identifying different optimal solutions and interpretations. @brand2023 reported a 1-factor solution to be the best fit, whereas  @lin2023 and @campos2021 found bifactor solutions [i.e., one general factor above a set of lower-level factors, @rodriguez2016evaluating] to be the best fit. Using Exploratory Factor Analysis (EFA), and constraining the solution to two factors to remain consistent with the original validation, @koike2023 identified a different 2-factor structure that differentiated cutaneous (itching, tickling, coughing, burping, affective touch, bruising, passing gas, sneezing, muscle sensations, sexual arousal, and taste) and visceral sensations (urination, defecation, hunger, thirst, pain, breathing, fatigue/blood sugar, temperature, vomiting, and heartbeat).
 
-Discussions have also been focused on specific items.
-For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others might capture phenomena not perceivable through interoceptive signals alone (e.g., "bruising"; p. 119).
-@lin2023 additionally highlights five locally dependent pairs and three items (touch, blood sugar, bruise) with exceptionally high difficulty and low discrimination, and @campos2021 reported "tickle" to be the only item that reflected more specific factors than the general factor. Furthermore, localization issues also arose, with both "itch" and "tickle" corresponding to the same Chinese character, leading to their collapse into a single item [@lin2023].
+As well as differences in the optimal factor structure of the IAS, there has also been discussion regarding the specificity of individual items. For instance, @murphy2019 note that while some items measure direct interoceptive signals such as cardioception, others likely capture phenomena that are difficult to detect solely through interoceptive signals (e.g., “bruising” might be detected through skin discoloration; p. 119). @lin2023 highlight several psychometric limitations, including five locally dependent pairs and three items (touch, blood sugar, bruise) with exceptionally high difficulty and low discrimination, suggesting further refinement of IAS items to improve precision. Localization issues also arose, with both “itch” and “tickle” corresponding to the same Chinese character, leading to their collapse into a single item [@lin2023]. Additionally, @campos2021 suggested that the IAS is predominately a unidimensional scale with all 20 items (with the exception of “tickle”)  reflecting a  general factor. 
 
 <!-- Relationship with other interoception measures -->
-Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional; @gaggero2021], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
-Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @koike2023; @gaggero2021], while others find small negative correlations [@lin2023], a quadratic positve relationship [@campos2021] or no correlation at all [@murphy2019].
-Positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023].
-Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [EDI-IA, @lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
-Lastly, the correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] appears rather small [@lin2023; @koike2023].
+
+Regarding its validity, the IAS has been compared to other interoception-related measures. It shows  positive correlations with most MAIA facets [@mehling2018multidimensional; @gaggero2021] except for the Not-Distracting and Not-Worrying subscales [@brand2023], subscales  previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining]. Comparisons between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @koike2023; @gaggero2021], while others find small negative correlations [@lin2023], a quadratic positive relationship [@campos2021] or no correlation at all [@murphy2019]. Positive correlations have been observed for four of the five subscales from the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023].  
+
+Additionally, the IAS is positively correlated with the interoceptive awareness subscale of the Eating Disorder Inventory [EDI-IA, @lin2023] and a negatively correlated with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia;  @brand2023; @murphy2019]. Finally, supporting the distinction between interoceptive accuracy and attention, IAS’ correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] is typically small [@lin2023; @koike2023].
 
 <!-- Convergent validity (correlates)  -->
 
-While assessing the predictive validity of an interoception scale can be conceived as theoretically challenging, expected negative associations were observed between the IAS and alexithymia [@brand2023; @koike2023; @campos2021; @murphy2019; @lin2023], somatic symptoms [@brand2023; @koike2023; @lin2023], depressive symptoms [@brand2023; @koike2023; @lin2023], anxiety [@brand2023], neuroticism [@brand2023] and self-esteem [@murphy2019].
-Taken together, these findings support the IAS as measuring an adaptive aspect of interoception, although its pattern of associations with other interoception (or interoception-related) questionnaires points towards some overlap across various theoretical dimensions, casting some doubt on the orthogonal models of interoception and the possibility of its faithful capture by questionnaires.
+Although assessing the predictive validity of an interoception scale may be theoretically challenging, expected negative associations have been consistently observed between the IAS and alexithymia [@brand2023; @koike2023; @campos2021; @murphy2019; @lin2023], somatic symptoms [@brand2023; @koike2023; @lin2023], depressive symptoms [@brand2023; @koike2023; @lin2023], anxiety [@brand2023], neuroticism [@brand2023] and self-esteem [@murphy2019].
+
+Taken together, these findings support the IAS as measuring an adaptive aspect of interoception, although its pattern of associations with other interoception (or interoception-related) questionnaires indicate overlap across various theoretical dimensions.  This further highlights limitations of strictly orthogonal models of interoception and the possibility of its faithful capture by questionnaires. Accordignly, while the IAS shows promise, the findings underscore the need for further refinement which the present paper seeks to address. 
 
 
 <!-- current study -->
 
-Given the increasing relevance of interoception across psychology and neuroscience, and the growing use of the IAS as an interesting self-report measure of interoceptive accuracy, the current study aims at 1) clarifying the structure of the IAS with a mega-analytic (which involves a re-analysis at the raw data level by aggregating datasets) approach that leverages existing data and contrast the traditional CFA/SEM factor-based analyses with network-based ones (Exploratory Graph Analysis);
-2) provide an overview of the dispositional correlates of the IAS, clarifying its general pattern of associations, which is key to better understand the nature, place and role of interoception questionnaires within a larger context.
+Given increasing interest in interoception across psychology and neuroscience, and the growing use of the IAS, careful scrutiny of this novel self-report measure of interoceptive accuracy is warranted. Therefore, the current study has two aims. First, to clarify the structure of the IAS using a mega-analytic approach which leverages existing data by aggregating existing datasets and re-analyzing them at the raw data level. This aggregated data will then be used to contrast the traditional CFA/SEM factor-based analyses and  Hierarchical Clustering Analysis (HCA) with newer network-based ones (Exploratory Graph Analysis). By utilizing conceptually distinct analytical frameworks, the current paper aims to provide a more nuanced and method-independent view of the IAS factor structure, allowing the identification of both convergent and potentially overlooked structural features that may not be apparent when relying on a single analytic approach. Second, to provide an overview of construct validity and the dispositional correlates of the IAS, clarifying its general pattern of associations with interoception-related constructs, mood, psychopathology and other relevant measures and thereby situating interoception questionnaires within a broader context.
+
 
 # Study 1
 
